--- a/style.css
+++ b/style.css
@@ -1026,3 +1026,11 @@ img[src=""] {
     }
 }
 
+#purchase-note{
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 1.2rem;
+    color: #444;
+    font-weight: 600;
+}
+
